# leX

./: CMakeLists.txt  README.md  compile.sh  configure.ac  sample  sample.cpp
.github/workflows/: c-cpp.yml
include/: Add.h  Init.h  Status.h  blobing.h  compress.h  decoder.h  treeblob.h
src/: Add.cpp  Init.cpp  Status.cpp  blobing.cpp  decoder.cpp  lex.cpp  treeblob.cpp2  zlibcompress.cpp
tests/: CMakeLists.txt  test.cpp  test_main.cpp
